# jxufe-pch

./: .gitignore  Cargo.toml  README.md  config.example.json
.VSCodeCounter/2023-12-31_10-55-39/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: ci.yml
src/: main.rs  mods.rs
src/mods/: client.rs  getinfo.rs  request.rs  types.rs  web.rs
src/mods/client/: init_data.rs  types.rs
src/mods/getinfo/: class_schedule.rs  xktime.rs
src/mods/web/: cache.rs  tools.rs  types.rs
static/: MainFrm.html  Main_index.jsp  login.html
static/common/popmsg/: Ref_PopMessage.css  Ref_PopMessage.js#v=10.0
static/common/userDefined/: user.funsearch.jsp#key=
static/css/: CombBox.css  Form.css  FormPlus.css  ctl_popwinc.css  xtree.css
static/custom/css/: FilePop.css
static/custom/js/: KingoCommon.js  SetKingoEncypt.jsp  SetRootPath.jsp  base64.2.js  base64.js  jquery.js  (+10 more)
static/frame/: Main_tools.js  homes.html
static/frame14/: DeskStu.v14.jsp  DeskStuInfo.js#v=65987170399599805613691  Main_banner.jsp  Main_index.jsp  Main_tools.jsp
static/js/: AjaxBase.js  CombBox.js  Common.js  Form.js  LeftPopMenu.js  NumberSelector.js  Ref_DropList.js  Ref_XTree.js  Themes.js  UserMenuBean.js  Validate.js  Window.js#v=20230519  foot.js
static/kbbp/: dykb.kckb.html#menucode=SB01&menucode=SB01
static/student/: ksap.sqbk.html#menucode=S20401  wsxk.tx.nopre.html#menucode=S2020205  wsxk.wnjzyxk.html#menucode=S2020210  wsxk.zx.html#menucode=S2020202
static/theme/: themeservlet#p=getUserThemes&date=1703990396560
(+51 files in other folders)
